# fastapi-auth-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d46f7ffc204_initial_migration.py  63aaf9466475_update_outboxmixin.py  dbb059ab58ed_add_users_tables.py  e14182bc7160_initial_migration.py  fbef5103fe13_add_accountmodel.py
src/: app_container.py  config.py  container.py  database.py  di.py  main.py  middlewares.py
src/config/: container.py  database.py  env.py  logging.py
src/modules/auth/: __init__.py  container.py  di.py
src/modules/auth/api/: dependencies.py  responses.py  routes.py  schemas.py
src/modules/auth/application/: auth_module_api.py  exceptions.py  uow.py
src/modules/auth/application/commands/: change_password.py  login.py  refresh_token.py  register.py  request_password_reset.py  request_verification_token.py  reset_password.py  send_mail.py  verify.py
src/modules/auth/application/events/: send_verification_mail.py  send_welcome_email.py
src/modules/auth/application/events/consumers/: account_registered.py
src/modules/auth/application/events/domain/: send_password_reset_mail.py  send_verification_mail.py
src/modules/auth/application/events/domain_to_integration/: account_registered.py
src/modules/auth/application/events/handlers/: send_password_reset_mail.py  send_password_rest_mail.py  send_verification_mail.py
src/modules/auth/application/events/integration/: account_registered.py
src/modules/auth/application/events/internal/: send_password_reset_mail.py  (+1 more)
src/modules/auth/application/queries/: common_dtos.py  get_account_by_id.py  get_account_by_token.py
src/modules/auth/containers/: auth.py
src/modules/auth/containers/partials/: command_handlers.py  domain_event_handlers.py  domain_services.py  exception_mappings.py  infra_services.py
src/modules/auth/contracts/: dtos.py  exceptions.py  integration_events.py  interfaces.py  module_port.py
src/modules/auth/contracts/events/: account_registered.py
src/modules/auth/di/: auth.py
src/modules/auth/di/partials/: command_handlers.py  domain_event_handlers.py  domain_services.py  integration_event_handlers.py  query_handlers.py
src/modules/auth/domain/: account.py  events.py  exceptions.py  interfaces.py  ports.py  repositories.py  services.py  value_objects.py
src/modules/auth/domain/entities/: account.py
src/modules/auth/domain/events/: account_registered.py  password_changed.py  password_reset_completed.py  password_reset_requested.py  verification_requested.py
src/modules/auth/domain/services/: account_authentication.py  account_registration.py
src/modules/auth/domain/value_objects/: email.py  plain_password.py
src/modules/auth/infrastructure/: auth_module_api.py  exceptions.py  module_adapter.py  services.py
src/modules/auth/infrastructure/database/: models.py  repositories.py  uow.py
src/modules/auth/infrastructure/services/: mail_sender.py  password_hasher.py  token_manager.py
src/modules/auth/infrastructure/templates/: reset_password_mail.html  verification_mail.html
src/modules/users/: __init__.py
src/modules/users/api/: dependencies.py  permissions.py  responses.py  routes.py  schemas.py
src/modules/users/application/: uow.py
src/modules/users/application/commands/: create_user.py  delete_user_by_id.py  update_my_user_profile.py  update_user.py  update_user_profile_by_id.py
src/modules/users/application/queries/: common_dtos.py  get_my_user_profile.py  get_user.py  get_user_by_account_id.py  get_user_by_id.py  get_user_profile_by_id.py
src/modules/users/containers/: users.py
src/modules/users/containers/partials/: command_handlers.py  domain_event_handlers.py  domain_services.py  exception_mappings.py  integration_event_handlers.py  query_handlers.py
src/modules/users/domain/: exceptions.py  repositories.py
src/modules/users/domain/entities/: user.py
src/modules/users/domain/services/: user_creation.py
src/modules/users/domain/value_objects/: username.py
src/modules/users/infrastructure/database/: models.py  repositories.py  uow.py
src/shared/api/: responses.py
src/shared/application/: cqrs.py  event_handling.py  exceptions.py  interfaces.py  ports.py  primitives.py  uow.py
src/shared/domain/: events.py  exceptions.py  primitives.py  registry.py
src/shared/infrastructure/: base_uow.py  buses.py  cqrs_buses.py  event_messaging.py  event_registry.py  exception_handler.py  exceptions.py  outbox.py  outbox_mixin.py  outbox_processor.py  repositories.py
src/shared/infrastructure/cqrs/: buses.py
src/shared/infrastructure/database/: base_repository.py  base_uow.py
src/shared/infrastructure/exceptions/: exception_handler.py  exception_registry.py  exceptions.py
src/shared/infrastructure/messaging/: event_bus.py  event_consumer.py  event_messaging.py  event_producer.py  event_publisher.py  event_registry.py
src/shared/infrastructure/outbox/: mixin.py  processor.py
(+1 files in other folders)
