[project]
name = "fastapi-auth-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Gucik",email = "danielgucik7@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

# =========================================================
# Linter & Formatter
# =========================================================

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "S"]
extend-ignore = ["D100", "D104", "D105", "D106", "D107"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
